crates/forge_provider/src/snapshots/forge_provider__request__tests__message_with_special_chars.snap
---
source: crates/forge_provider/src/request.rs
expression: router_message
snapshot_kind: text
---
{
  "role": "user",
  "content": "Here's some XML content:\n<task>\n    <id>123</id>\n    <description>Test <special> characters</description>\n    <data key=\"value\">\n        <item>1</item>\n        <item>2</item>\n    </data>\n</task>"
}
