crates/forge_provider/src/snapshots/forge_provider__request__tests__tool_message_conversion.snap
---
source: crates/forge_provider/src/request.rs
expression: router_message
snapshot_kind: text
---
{
  "role": "tool",
  "content": "<tool_result>\n<tool_name>test_tool</tool_name>\n<success>\n<address>\n<city>New York</city>\n</address>\n<address>\n<city>San Francisco</city>\n</address>\n<age>30</age>\n<user>John</user>\n</success>\n</tool_result>",
  "name": "test_tool",
  "tool_call_id": "123"
}
