crates/forge_provider/src/snapshots/forge_provider__request__tests__user_message_conversion.snap
---
source: crates/forge_provider/src/request.rs
expression: router_message
snapshot_kind: text
---
{
  "role": "user",
  "content": "Hello"
}
